fix: handle kanban text overflow

--- a/packages/core/client/src/board/style.less
+++ b/packages/core/client/src/board/style.less
@@ -1,6 +1,11 @@
 .react-kanban-board {
   // padding: 5px;
   margin-bottom: 24px;
+  .nb-block-item .ant-formily-item-control .ant-space-item{
+    white-space: normal;
+    word-break: break-all;
+    word-wrap: break-word;
+  }
 }
 
 .react-kanban-card {
